Update jextract/panama branch to track JDK 22
Reviewed-by: jvernee